# megalinref

./: .gitignore  Cargo.toml  lookup_withoutunwraps_backup.rs  pyproject.toml  readme.md
.github/workflows/: build_artifact.yml
python/megalinref/: __init__.py  _cwy.py  _data_handling.py  _download_fresh_data_as_json.py  _factory_functions.py  _network_type.py  data_handling.py  megalinref.cp39-win_amd64.pyd  megalinref.pyi
src/: enums.rs  lib.rs  load_or_fetch_data.rs  lookup.rs  slk_from_lat_lon.rs
src/data_types/: enum_cwy.rs  enum_networktype.rs  extracted_feature.rs  extracted_linestring.rs  extracted_properties.rs  mod.rs  road_sections_by_carriageway.rs
src/datatypes/: enum_cwy.rs  enum_networktype.rs  extracted_feature.rs  extracted_linestring.rs  extracted_properties.rs  mod.rs  road_sections_by_carriageway.rs
src/util/: degree_meter_conversion.rs  extracted.rs  mod.rs  pyobject_linestring.rs
tests/: conftest.py  fixtures.py  main.py  manual - test prototypes.ipynb  manual_testing.ipynb  setup temporary_test_data.ipynb  test binary io.py  test enums.py  test_basic_constructor.py  test_basic_run.py  test_binary_io.py  test_coord_from_road_slk.py  test_crash.py  test_enums.py  test_from_dict.py  test_from_to_binary.py  test_io.py  test_road_slk_from_coord.py
tests/fixtures/: __init__.py  _road_network_as_dict.py
tests/util/: confirm_test_cases_with_instance.py  dictdiffer_tools.py  example_result_cases.py  get_test_road_network_as_dict.py  test_result_cases.py  unit_conversion.py
tests_notebooks/: manual - noodle.ipynb  manual - test dictdiffer.ipynb  manual - test downloading raw data.ipynb  setup temporary_test_data.ipynb
