[package]
name    = "megalinref"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo-types  = {version = "0.7" }
geo        = {version = "0.18",  features = ["use-serde"]}
pyo3       = {version = "0.15",  features = [
    "abi3-py38",
    "extension-module",
    "nightly"
]}
hashbrown = {version = "0.11.2", features=["serde"]}
serde     = {version = "1.0" }
bincode   = {version = "1.3" }
rayon     = {version = "1.5" }
