[package]
name    = "megalinref"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo        = {version = "0.26",  features = ["use-serde"]}
pyo3       = {version = "0.19",  features = [
    "abi3-py38",
    "extension-module",
    "nightly"
]}
hashbrown = {version = "0.14", features = ["serde"]}
serde     = {version = "1.0" }
bincode   = {version = "1.3" }
rayon     = {version = "1.7" }
