[package]
name    = "megalinref"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#geo        = {version = "0.26",  features = ["use-serde"]}
geo = { git="https://github.com/thehappycheese/geo", package="geo", rev="e709ebe", features = ["use-serde"]}
geo-types = { version = "0.7.9" }
pyo3       = {version = "0.20",  features = [
    "abi3-py310",
    "extension-module",
    "nightly"
]}
hashbrown = {version = "0.14", features = ["serde"]}
serde     = {version = "1.0" , features = ["derive"]}
bincode   = {version = "1.3" }
rayon     = {version = "1.7" }
