[project]
name            = "megalinref"
description     = "Find SLK and Road Number from lat/lon (and vice versa) using Main Roads Western Australia open data portal data."
readme          = "readme.md"
requires-python = ">=3.7"
author = "Nicholas Archer"
dependencies = ["pandas", "requests", "arcgis2geojson"]

[project.urls]
repository      = "https://github.com/thehappycheese/megalinref"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = [
    "tests"
]